--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <style>
     body { font-family: 'Tahoma', sans-serif; margin: 0; background-color: #f5f5f5; color: #222; }
     header { background-color: #0f172a; color: white; padding: 1rem 2rem; text-align: center; }
+    <header>
+  <img src="٢٠٢٥٠١٠٤_٠٢١٨٠١.jpg" alt="شعار النجم الحديث" style="max-width: 150px; display: block; margin: 0 auto;">
+  <h1>النجم الحديث</h1>
+  <p>متخصصون في بيع قطع غيار السيارات الأصلية</p>
+</header>
     nav { background-color: #1e293b; display: flex; justify-content: center; gap: 2rem; padding: 1rem; }
     nav a { color: white; text-decoration: none; font-weight: bold; }
     .hero { background-color: #e2e8f0; padding: 2rem; text-align: center; }
