--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>النجم الحديث - قطع غيار السيارات</title>
+  <meta name="description" content="النجم الحديث لقطع غيار السيارات - توصيل سريع، جودة مضمونة، دفع عبر بنك الكريمي.">
+<meta name="keywords" content="قطع غيار سيارات, النجم الحديث, الكريمي, فلتر زيت, بطاريات, رديتر">
+<meta name="author" content="النجم الحديث">
   <style>
     body { font-family: 'Tahoma', sans-serif; margin: 0; background-color: #f5f5f5; color: #222; }
     header { background-color: #0f172a; color: white; padding: 1rem 2rem; text-align: center; }
