--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <meta name="keywords" content="قطع غيار سيارات, النجم الحديث, الكريمي, فلتر زيت, بطاريات, رديتر">
 <meta name="author" content="النجم الحديث">
   <style>
-    body { font-family: 'Tahoma', sans-serif; margin: 0; background-color: #f5f5f5; color: #222; }
-    header { background-color: #0f172a; color: white; padding: 1rem 2rem; text-align: center; }
-    <header>
+  <header>
+  <h1>النجم الحديث</h1>
+  <p>متخصصون في بيع قطع غيار السيارات الأصلية</p>
+  <p style="margin-top: 10px;">للطلب أو الاستفسار: <strong>776798168</strong></p>
+</header>
   <img src="٢٠٢٥٠١٠٤_٠٢١٨٠١.jpg" alt="شعار النجم الحديث" style="max-width: 150px; display: block; margin: 0 auto;">
   <h1>النجم الحديث</h1>
   <p>متخصصون في بيع قطع غيار السيارات الأصلية</p>
