--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>النجم الحديث - قطع غيار السيارات</title>
   <meta name="description" content="النجم الحديث لقطع غيار السيارات - توصيل سريع، جودة مضمونة، دفع عبر بنك الكريمي.">
-<meta name="keywords" content="قطع غيار سيارات, النجم الحديث, الكريمي, فلتر زيت, بطاريات, رديتر">
-<meta name="author" content="النجم الحديث">
+  <meta name="keywords" content="قطع غيار سيارات, النجم الحديث, الكريمي, فلتر زيت, بطاريات, رديتر">
+  <meta name="author" content="النجم الحديث">
   <style>
-  <header>
-  <h1>النجم الحديث</h1>
-  <p>متخصصون في بيع قطع غيار السيارات الأصلية</p>
-  <p style="margin-top: 10px;">للطلب أو الاستفسار: <strong>776798168</strong></p>
-</header>
-  <img src="٢٠٢٥٠١٠٤_٠٢١٨٠١.jpg" alt="شعار النجم الحديث" style="max-width: 150px; display: block; margin: 0 auto;">
-  <h1>النجم الحديث</h1>
-  <p>متخصصون في بيع قطع غيار السيارات الأصلية</p>
-</header>
+    body { font-family: 'Tahoma', sans-serif; margin: 0; background-color: #f5f5f5; color: #222; }
+    header { background-color: #0f172a; color: white; padding: 1rem 2rem; text-align: center; }
     nav { background-color: #1e293b; display: flex; justify-content: center; gap: 2rem; padding: 1rem; }
     nav a { color: white; text-decoration: none; font-weight: bold; }
     .hero { background-color: #e2e8f0; padding: 2rem; text-align: center; }
@@ -28,75 +21,4 @@
     form { display: flex; flex-direction: column; gap: 1rem; }
     input, textarea, select { padding: 0.75rem; border: 1px solid #ccc; border-radius: 0.5rem; }
     button { background-color: #0f172a; color: white; padding: 0.75rem; border: none; border-radius: 0.5rem; cursor: pointer; }
-    footer { background-color: #0f172a; color: white; text-align: center; padding: 1rem; margin-top: 2rem; }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>النجم الحديث</h1>
-    <p>متخصصون في بيع قطع غيار السيارات الأصلية</p>
-  </header>
-
-  <nav>
-    <a href="#">الرئيسية</a>
-    <a href="#">المنتجات</a>
-    <a href="#order">طلب شراء</a>
-    <a href="#contact">اتصل بنا</a>
-  </nav>
-
-  <section class="hero">
-    <h2>أفضل قطع الغيار لسيارتك</h2>
-    <p>توصيل سريع - جودة مضمونة - دفع عبر بنك الكريمي</p>
-  </section>
-
-  <section class="products">
-    <div class="product">
-      <h3>فلتر زيت</h3>
-      <p>فلتر زيت أصلي لجميع أنواع السيارات.</p>
-      <button>اطلب الآن</button>
-    </div>
-    <div class="product">
-      <h3>بطارية</h3>
-      <p>بطاريات عالية الجودة تدوم طويلاً.</p>
-      <button>اطلب الآن</button>
-    </div>
-    <div class="product">
-      <h3>رديتر</h3>
-      <p>رديترات مصممة لتحمّل درجات الحرارة العالية.</p>
-      <button>اطلب الآن</button>
-    </div>
-  </section>
-
-  <section class="order" id="order">
-    <h2>طلب شراء</h2>
-    <form>
-      <input type="text" placeholder="الاسم الكامل" required>
-      <input type="tel" placeholder="رقم الهاتف" required>
-      <input type="text" placeholder="اسم القطعة المطلوبة" required>
-      <select required>
-        <option value="">اختر طريقة الدفع</option>
-        <option value="الكريمي">بنك الكريمي</option>
-        <p>رقم حساب بنك الكريمي: 1234567890</p>
-        <option value="عند الاستلام">عند الاستلام</option>
-      </select>
-      <textarea rows="4" placeholder="ملاحظات إضافية (اختياري)"></textarea>
-      <button type="submit">إرسال الطلب</button>
-    </form>
-  </section>
-
-  <section class="contact" id="contact">
-    <h2>اتصل بنا</h2>
-    <form>
-      <input type="text" placeholder="الاسم الكامل" required>
-      <input type="email" placeholder="البريد الإلكتروني" required>
-      <textarea rows="5" placeholder="رسالتك..." required></textarea>
-      <button type="submit">إرسال</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>جميع الحقوق محفوظة &copy; النجم الحديث 2025</p>
-    <p>للتواصل: 776798168</p>
-  </footer>
-</body>
-</html>
+    footer { background-color: #
