--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>النجم الحديث - قطع غيار السيارات</title>
-  <meta name="description" content="النجم الحديث لقطع غيار السيارات - توصيل سريع، جودة مضمونة، دفع عبر بنك الكريمي.">
+  <meta name="description" content=".از عند الاستلامالنجم الحديث لقطع غيار السيارات - توصيل سريع، جودة مضمونة، دفع عبر بنك الكريمي.">
   <meta name="keywords" content="قطع غيار سيارات, النجم الحديث, الكريمي, فلتر زيت, بطاريات, رديتر">
   <meta name="author" content="النجم الحديث">
   <style>
